# SourceEngineRebuild

./: .gitignore  README.md
src/: CMakeLists.txt  creategameprojects.bat
src/Engine/: CMakeLists.txt
src/avi/: avi.cpp  avi.h  bink.cpp
src/cef_process_helper/: CMakeLists.txt  client_app.cpp  client_app.h  process_helper.cpp  render_browser.cpp  render_browser.h  render_browser_helpers.cpp  render_browser_helpers.h  resource.h  stdafx.cpp
src/cmake/: Default.cmake  DefaultCXX.cmake  DefaultFortran.cmake  ProtobufBuilder.cmake  Utils.cmake
src/common/: ConfigManager.cpp  ConfigManager.h  IFileSystemOpenDialog.h  IManageServer.h  IVGuiModuleLoader.h  SourceAppInfo.cpp  SourceAppInfo.h  SteamAppStartup.h  SteamBootStrapper.h  Steamlib.h  blackbox_helper.h  compiledcaptionswap.cpp  crypto.cpp  cserserverprotocol_engine.h  cstringhash.h  debug_dll_check.cpp  hl2orange.xml  iappinformation.h  igameserverdata.h  imageloadwrapper.h  imageutils.h  info_key.h  ivprofexport.h  jpegloader.cpp  jpegloader_common.cpp  lauxlib.h  lua.h  luaconf.h  lualib.h  netapi.cpp  netmessages.cpp  proto_oob.h  qlimits.h  steamcommon.h  steamid.cpp  studiobyteswap.cpp  tgaloader.h  valve_ipc_win32.h
src/datacache/: CMakeLists.txt  datacache.cpp  datacache_common.h  mdlcache.cpp
src/datamodel/: CMakeLists.txt  DmElementFramework.cpp  clipboardmanager.h  datamodel.cpp  dependencygraph.cpp  dependencygraph.h  dmelementdictionary.cpp  dmserializerbinary.h  dmserializerkeyvalues2.cpp  undomanager.cpp  undomanager.h
src/dedicated/: CMakeLists.txt  filesystem.cpp  isys.h  resource.h  sys_ded.cpp  sys_linux.cpp  sys_windows.cpp
src/dedicated_main/: CMakeLists.txt  dedicated_main.rc  main.cpp
src/dmserializers/: CMakeLists.txt  dmebaseimporter.cpp  dmserializers.cpp  importactbusy.cpp  importkeyvaluebase.cpp  importsfmv1.cpp  importsfmv4.cpp  importsfmv5.cpp  importsfmv6.cpp  importsfmv8.cpp  importvmf.cpp  importvmt.cpp
src/dmxloader/: CMakeLists.txt  dmxattribute.cpp  dmxelement.cpp  dmxloadertext.cpp  dmxserializationdictionary.cpp  dmxserializationdictionary.h
src/engine/: CMakeLists.txt
src/fgdlib/: CMakeLists.txt  gamedata.cpp  gdclass.cpp  gdvar.cpp  wckeyvalues.cpp
src/filesystem/: CMakeLists.txt  basefilesystem.cpp  filesystem_stdio.cpp  filesystem_steam.cpp  filetracker.h  linux_support.cpp  packfile.h
src/gameui/: BasePanel.cpp  BasePanel.h  BaseSaveGameDialog.h  BenchmarkDialog.cpp  BitmapImagePanel.cpp  BitmapImagePanel.h  BonusMapsDatabase.h  BonusMapsDialog.cpp  BonusMapsDialog.h  CDKeyEntryDialog.cpp  CDKeyEntryDialog.h  CMakeLists.txt  ChangeGameDialog.h  CommentaryDialog.cpp  CommentaryExplanationDialog.h  ControllerDialog.cpp  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.h  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameServerPage.cpp  CreateMultiplayerGameServerPage.h  CustomTabExplanationDialog.cpp  CustomTabExplanationDialog.h  CvarNegateCheckButton.cpp  CvarNegateCheckButton.h  CvarToggleCheckButton.cpp  CvarToggleCheckButton.h  EngineInterface.h  GameConsole.cpp  GameConsoleDialog.cpp  GameUIPanel.h  GameUI_Interface.cpp  GameUI_Interface.h  HapticControlBox.cpp  KeyToggleCheckButton.h  LabeledCommandComboBox.h  LoadGameDialog_Xbox.cpp  LogoFile.cpp  ModInfo.cpp  (+32 more)
src/gcsdk/: CMakeLists.txt  accountdetails.cpp  directory.cpp  framefunction.cpp  gc_convar.cpp  gcbase.cpp  gcclient_sharedobjectcache.cpp  gcconstants.cpp  gcdirtyfield.cpp  gcinterface.cpp  gcleaderboardapi.cpp  gcmsg.cpp  gcparalleljobfarm.cpp  gcreportprinter.cpp  gcsqlquery.cpp  gcwebapi.cpp  gcwebapikey.cpp  http.cpp  jobmgr.cpp  jobtime.cpp  msgprotobuf.cpp  netpacket.cpp  netpacketpool.cpp  sharedobject.cpp  sharedobjecttransaction.cpp  webapi_response.cpp  workthreadpool.cpp
src/hammer/: AnchorMgr.cpp  AnchorMgr.h  CMakeLists - Copy.txt  CMakeLists.txt  DispShore.cpp  DispShore.h  FileChangeWatcher.cpp  FileChangeWatcher.h  FilteredComboBox.cpp  FilteredComboBox.h  HammerScene.cpp  HammerScene.h  HammerVGui.cpp  HammerVGui.h  MapAxisHandle.cpp  MapAxisHandle.h  MapDiffDlg.cpp  MapDiffDlg.h  MapHelper.h  ModelBrowser.cpp  ModelBrowser.h  NewVisGroupDlg.cpp  NewVisGroupDlg.h  OP_Model.cpp  OP_Model.h  ObjectPage.cpp  PopupMenus.h  Render.cpp  Render.h  RenderUtils.cpp  RenderUtils.h  ScenePreviewDlg.cpp  ScenePreviewDlg.h  SearchReplaceDlg.cpp  SearchReplaceDlg.h  SelectModeDlgBar.h  Selection.cpp  Selection.h  SmoothingGroupMgr.cpp  SmoothingGroupMgr.h  (+421 more)
src/hammer_launcher/: CMakeLists.txt  hammer_launcher.rc  main.cpp  resource.h
src/materialsystem/: CColorCorrection.cpp  CMakeLists.txt  CMaterialSubRect.cpp  IHardwareConfigInternal.h  checkmaterials.cpp  cmaterial.cpp  cmaterial_queuefriendly.cpp  cmaterial_queuefriendly.h  cmaterialdict.cpp  cmaterialsystem.cpp  cmaterialsystem.h  cmatnullrendercontext.h  cmatqueuedrendercontext.h  cmatrendercontext.cpp  colorspace.cpp  colorspace.h  ctexture.cpp  imaterialsysteminternal.h  itextureinternal.h  ivprocshader.cpp  ivprocshader.h  mat_stub.cpp  materialsystem_global.h  occlusionquerymgr.h  pch_materialsystem.cpp  procshaderinterface.cpp  procshaderinterface.h  resource.h  shader_dll_verify.cpp  shader_dll_verify.h  shadersystem.cpp  texturemanager.cpp
src/mdlobjects/: dmeblankbodypart.cpp  dmebodypart.cpp  dmebonemasklist.cpp  dmelodlist.cpp  dmemdllist.cpp  dmesequencelist.cpp
src/minisef/: CMakeLists.txt
src/movieobjects/: CMakeLists.txt  dmeanimationset.cpp  dmebalancetostereocalculatoroperator.cpp  dmecamera.cpp  dmechannel.cpp  dmeclip.cpp  dmedrawsettings.cpp  dmeeditortypedictionary.cpp  dmeexpressionoperator.cpp  dmeeyeball.cpp  dmeimage.cpp  dmemakefile.cpp  dmemakefileutils.cpp  dmemesh.cpp  dmemodel.cpp  dmemorphoperator.cpp  dmeoperator.cpp  dmepackoperators.cpp  dmeparticlesystemdefinition.cpp  dmephonememapping.cpp  dmeshape.cpp  dmetestmesh.cpp  dmetexture.cpp  dmetimeframe.cpp  dmetimeselection.cpp  dmetrack.cpp  dmetransformlist.cpp  dmetransformoperator.cpp  dmeunpackoperators.cpp  dmevertexdata.cpp  dmmeshutils.cpp  dmsmdserializer.cpp  dmx_to_vcd.cpp  (+2 more)
(+16584 files in other folders)
